Some fixes according to the review